tests/ui/crablangdoc/cfg-crablangdoc.stderr
error[E0425]: cannot find value `Foo` in this scope
  --> $DIR/cfg-crablangdoc.rs:5:13
   |
LL |     let f = Foo;
   |             ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0425`.
